# CROUStillant

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  __main__.py  crontab  docker-compose.yml  migration_add_menu_hash.sql  postgresql.conf  pyproject.toml  requirements.txt  schema.sql  userlist.txt  worker.py
.github/: dependabot.yml
.github/workflows/: deployment.yaml
CROUStillant/: logger.py  views.py  worker.py
views/: v_categories.sql  v_compositions.sql  v_menus.sql  v_plats.sql  v_regions.sql  v_repas.sql  v_restaurants.sql  v_stats.sql  v_taches.sql  v_taches_log.sql  v_types_restaurants.sql
