[project]
name = "croustillant"
version = "0.1.0"
description = "CROUStillant, tracking the french universities restaurants menus"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.17",
    "async-timeout>=5.0.1",
    "asyncpg>=0.30.0",
    "crouspy",
    "discord-py>=2.5.2",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
]

[tool.uv.sources]
crouspy = { git = "https://github.com/CROUStillant-Developpement/CrousPy.git" }
